<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneLoginActivity"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/phone_login_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/nose_v3"
            />

        <EditText
            android:id="@+id/phone_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/inputs"
            android:padding="8dp"
            android:hint="@string/type_your_phone_number"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:inputType="phone"
            android:drawableStart="@drawable/phone"
            android:layout_below="@+id/phone_login_image"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorAccent"/>

        <EditText
            android:id="@+id/verification_code_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/inputs"
            android:inputType="number"
            android:layout_below="@+id/phone_login_image"
            android:padding="5dp"
            android:hint="@string/type_the_verification_code"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:drawableStart="@drawable/password"
            android:textAlignment="center"
            android:textStyle="bold"
            android:visibility="invisible"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorAccent"/>

        <Button
            android:id="@+id/send_code_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/verification_code_input"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/send_verification_code"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@android:color/background_light"
            android:background="@drawable/buttons"
            />

        <Button
            android:id="@+id/verify_phone_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/verification_code_input"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/verify"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@android:color/background_light"
            android:background="@drawable/buttons"
            android:visibility="invisible"
            />
    </RelativeLayout>
</ScrollView>