<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/register_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/nose_v3"
            />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/register_image"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/inputs"
            android:padding="4dp"
            android:drawableStart="@drawable/email"
            android:layout_marginTop="25dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:textColorHint="@color/colorAccent"
            android:textColor="@android:color/white"
            />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/register_email"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/inputs"
            android:padding="4dp"
            android:drawableStart="@drawable/password"
            android:layout_marginTop="10dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:textColorHint="@color/colorAccent"
            android:textColor="@android:color/white"
            />

        <EditText
            android:id="@+id/retyped_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/register_password"
            android:hint="@string/retype_password"
            android:inputType="textPassword"
            android:background="@drawable/inputs"
            android:padding="4dp"
            android:drawableStart="@drawable/password"
            android:layout_marginTop="10dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:textColorHint="@color/colorAccent"
            android:textColor="@android:color/white"
            />

        <Button
            android:id="@+id/register_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/retyped_password"
            android:padding="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/create_account"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@android:color/background_light"
            android:background="@drawable/buttons"
            />

        <TextView
            android:id="@+id/already_have_account_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/register_button"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="Already Have an Account?"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            />
    </RelativeLayout>
</ScrollView>