<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            layout="@layout/app_bar_layout"
            android:id="@+id/settings_toolbar">


        </include>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_below="@+id/settings_toolbar"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:src="@drawable/profile_img"
            app:civ_border_width="5dp"
            app:civ_border_color="@color/colorPrimary"/>


        <ImageButton
            android:id="@+id/delete_profileImg_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/delete_profileimg"
            android:layout_above="@+id/set_username"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:visibility="invisible"/>

        <EditText
            android:id="@+id/set_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_image"
            android:inputType="textMultiLine"
            android:hint="@string/your_username"
            android:textAlignment="center"
            android:drawableStart="@drawable/set_usernamev1"
            android:drawablePadding="-55sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="@drawable/inputs"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorAccent"
            />



        <EditText
            android:id="@+id/set_status"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_below="@+id/set_username"
            android:inputType="textMultiLine"
            android:hint="@string/about_yourself"
            android:textAlignment="center"
            android:drawableStart="@drawable/about"
            android:drawablePadding="-55sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="@drawable/inputs"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorAccent"
            />

        <Spinner
            android:id="@+id/set_language"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_below="@+id/set_status"
            android:entries="@array/languages"
            android:textAlignment="center"
            android:background="@drawable/inputs"
            android:spinnerMode="dropdown"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            />

    <!--    <ImageView-->
    <!--        android:id="@+id/languages_icon"-->
    <!--        android:src="@drawable/languages"-->
    <!--        android:layout_width="20pt"-->
    <!--        android:layout_height="20pt"-->
    <!--        android:layout_below="@+id/set_status"-->
    <!--        android:layout_marginStart="15dp"-->
    <!--        android:layout_marginEnd="15dp"-->
    <!--        android:padding="5dp"-->
    <!--        android:layout_marginTop="15dp"-->
    <!--        />-->

        <Button
            android:id="@+id/update_profile_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/set_translation"
            android:padding="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/done"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@android:color/background_light"
            android:background="@drawable/buttons"
            />

        <TextView
            android:id="@+id/profile_username_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_image"
            android:layout_alignParentStart="true"
            android:textAllCaps="false"
            android:textSize="19sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

        <Switch
            android:id="@+id/set_translation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="5dp"
            android:text="@string/translation"
            android:textColor="@android:color/white"
            android:textSize="19sp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_vertical"
            android:layout_below="@+id/set_language"
            android:textOff="@string/off"
            android:textOn="@string/on"
            />

    <!--    <LinearLayout-->
    <!--        android:id="@+id/set_translation_layout"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:layout_below="@+id/set_language">-->

    <!--        <TextView-->
    <!--            android:id="@+id/set_translation_label"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginStart="15dp"-->
    <!--            android:layout_marginTop="0dp"-->
    <!--            android:layout_marginEnd="15dp"-->
    <!--            android:gravity="center"-->
    <!--            android:padding="5dp"-->
    <!--            android:text="Translation:"-->
    <!--            android:textAlignment="center"-->
    <!--            android:textAllCaps="false"-->
    <!--            android:layout_gravity="center_vertical"-->
    <!--            android:textColor="@color/colorPrimaryDark"-->
    <!--            android:textSize="19dp" />-->

    <!--        -->

    <!--    </LinearLayout>-->
    </RelativeLayout>
</ScrollView>